--- a/css/main.css
+++ b/css/main.css
@@ -103,3 +103,11 @@ p{
 	padding-right: 10px;
 	padding-left: 10px;
 }
+.imageDiv3{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	border-color: #3677e3;
+	border-width: 8px;
+	border-style: solid;
+}
