--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,9 @@ body{
 .accent3-2{
 	text-align: left;
 }
-
+.accentFooter{
+	text-align: center;
+}
 .title{ grid-area: title; }
 .div1{ grid-area: div1; }
 .div2{ grid-area: div2; }
@@ -107,6 +109,12 @@ p{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	border-color: #3677e3;
+	border-width: 8px;
+	border-style: solid;
+}
+.youtube{
+	padding-left: 500;
 	border-color: #3677e3;
 	border-width: 8px;
 	border-style: solid;
