--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body{
 	font-size: 18px;
 	font-family: 'Exo', sans-serif;
 	color: #f0f0f0;
-}/*deals with background and text8*/
+}/*deals with background and text*/
 .accentHeader{
 	text-align: right;
 	margin-right: auto;
