--- a/css/main.css
+++ b/css/main.css
@@ -9,33 +9,36 @@ body{
 }/*deals with background and text*/
 a:link, a:visited {
 	color: #f0f0f0;
+	background-color: #0f0f0f;
 	text-decoration: none;
 	padding: 14px 25px;
 	display: inline-block;
-	border-radius: 50px;
+	border-radius: 1px;
 	border-style: solid;
 	border-color: #3677e3;
-	border-width: 3px;
+	border-width: 1px;
 }
 a:hover {
 	color: #f0f0f0;
+	background-color: #0f0f0f;
 	text-decoration: underline;
 	padding: 14px 25px;
 	display: inline-block;
-	border-radius: 50px;
+	border-radius: 1px;
 	border-style: solid;
 	border-color: #3677e3;
-	border-width: 3px;
+	border-width: 1px;
 }
 a:active {
 	color: #3f6c99;
+	background-color: #0f0f0f;
 	text-decoration: none;
 	padding: 14px 25px;
 	display: inline-block;
-	border-radius: 50px;
+	border-radius: 1px;
 	border-style: solid;
 	border-color: #3677e3;
-	border-width: 3px;
+	border-width: 1px;
 }
 .accentNav {
 	list-style-type: none;
@@ -45,6 +48,8 @@ a:active {
 
 /*page 1*/
 .landingBox {
+	width: 1100px;
+	display: grid;
 	background-image: linear-gradient(165deg, #0f0f0f, #212121);
 	background-repeat: no-repeat;
 	overflow: hidden;
